lessons/175/k8s/service-a/7-service-a-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: service-a
  namespace: service-a
spec:
  ports:
    - port: 8080
      protocol: TCP
  selector:
    app: service-a
