lessons/175/k8s/service-a/4-service-a-virtual-service.yaml
---
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: service-a
  namespace: service-a
spec:
  awsName: service-a.service-a.svc.cluster.local
  provider:
    virtualRouter:
      virtualRouterRef:
        name: service-a
